fix jump bug

--- a/src/components/TestRoute/style.scss
+++ b/src/components/TestRoute/style.scss
@@ -54,6 +54,7 @@
     align-items: center;
     justify-content: flex-end;
     flex: 0 0 auto;
+    min-height: 16px;
   }
 
   &__title {
